<resources>
    <string name="app_name">OverRendicion</string>

    <string name="name_pendiente">Pendientes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Complete">Completado</string>
    <string name="Error">Error</string>
    <string name="Upload">Subiendo</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Mensaje">Por medio de esta aplicacion podrás rendir tus documentos por concepto de viaticos, movilidad, entregas y otros.</string>
    <string name="Mensaje2">Si no has ingresado anteriormente presiona en la opción <u>Registrar</u></string>
    <string name="Recovery">Recuperar</string>
    <string name="Register">Registrar</string>
    <string name="Registered">Registrarse</string>

    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>

    <string name="createTittle">Registrar Cuenta</string>
    <string name="createMessage">Necesitas una cuenta para registrar tus rendiciones. Completa la siguiente información para obtener una cuenta en poco tiempo.</string>
    <string name="createUserDni">Numero DNI</string>
    <string name="createEmail">Correo electronico</string>
    <string name="createEmailError">Correo electronico no es correcto</string>
    <string name="createPassword">Contraseña</string>
    <string name="recoveryPassword">Recuperar Contraseña</string>
    <string name="recoveryPasswordSuccess">Su nueva contraseña a sido generada, por favor revise su correo.</string>
    <string name="recoveryPasswordError">No se a podido recuperar su contraseña</string>
    <string name="createPhone">Telefono</string>
    <string name="createButton">Registrarse</string>

    <string name="loginSucces">Usuario logeado</string>
    <string name="loginUnSucces">Usuario No logeado</string>

    <string name="send">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="hello_blank_fragment">hola 1</string>
    <string name="toolbar">Home</string>
    <string name="transitionname_picture">transitionnamepicture</string>

    <!--datos del drawer-->
    <string name="solicitar_rendicion">Solicitar Rendicion</string>
    <string name="enviar_resumen_corre">Enviar Resumen a Correo</string>
    <string name="actulizar_contraseña">Actualizar Contraseña</string>
    <string name="actulizar_correo">Actualizar Correo</string>
    <string name="liquidaciones_pendientes">Liquidaciones Pendientes</string>
    <string name="reenbolso">Reenbolso</string>
    <string name="configuracion">Configuracion</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="mensajeRecovyPassword">Por medio de esta opción podrás actualizar tu contraseña de forma rápida.</string>
    <string name="mensajeUpdateEmail">Por medio de esta opción podrás actualizar tu correo electronico de forma rápida.</string>

    <!--Apis Login-->
    <string name="servidorSuccess">OK</string>
    <string name="servidorError">Error al conectar con el servidor</string>
    <string name="sessionError">Usuario o Contraseña incorrectas</string>
    <string name="createAccountSucces">Su Usuario ha sido creado. Por favor revise su bandeja de correo</string>
    <string name="createAccountError">El usuario no existe</string>
    <string name="errorUpdateLiquidacion">Ocurrio un error al Actualizar los datos</string>

    <!--Apis Login-->
    <string name="successPendienteList">Se listo Correctamente los Pendientes</string>
    <string name="errorPendienteList">Ocurrio un error al listar los Pendientes</string>

    <!--RecyclearViewEffect-->
    <integer name="material_in_fade_anim_duration">1000</integer>
    <integer name="material_in_slide_anim_duration">1000</integer>


    <string name="error_date">No puede seleccionar la fecha anterior.</string>
    <string name="updateSuccess">Los datos de Guardaron Correctamente</string>


    <string name="tittleSpinerSearch">Selecciona una Provincia</string>
    <string name="tittleSpinerTipoGasto">Selecciona un Tipo de Gasto</string>
    <string name="tittleSpinerBanco">Selecciona un Banco</string>

    <string name="IGV">0.18</string>

    <array name="tipo_liquidacion">
        <item>Nacional</item>
        <item>Extranjero</item>
    </array>

    <array name="tipo_moneda">
        <item>Soles</item>
        <item>Dolares</item>
    </array>

    <array name="tipo_servicio">
        <item>Luz</item>
        <item>Agua</item>
        <item>Telefono</item>
    </array>

    <array name="tipo_ingreso">
        <item>Individual</item>
        <item>Masivo</item>
    </array>

    <array name="tipo_gasto_aereo">
        <item>OTROS GASTOS DE VIAJE</item>
        <item>TRANSPORTE DE PASAJEROS (AEREO/TERRESTRE)</item>
    </array>

    <color name="colorWhite">#FFFFFF</color>
    <color name="colorBlack">#000000</color>
    <color name="colorOverlayLight">#40000000</color>
    <color name="colorOverlayDark">#AA000000</color>

    <array name="tipo_documento_arrendamiento">
        <item>documento 1</item>
        <item>documento 2</item>
        <item>documento 3</item>
        <item>documento 4</item>
        <item>documento 5</item>
    </array>

    <array name="tipo_documento">
        <item>DNI</item>
        <item>Carnet de Extranjeria</item>
        <item>REG:Unico de Contribuyentes</item>
        <item>Pasaporte</item>
        <item>Partida de Nacimiento</item>
    </array>

    <array name="tipo_gasto_arrendamiento">
        <item>gasto 1</item>
        <item>gasto 2</item>
        <item>gasto 3</item>
        <item>gasto 4</item>
        <item>gasto 5</item>
    </array>

    <array name="tipo_destinos">
        <item>destinos 1</item>
        <item>destinos 2</item>
        <item>destinos 3</item>
        <item>destinos 4</item>
        <item>destinos 5</item>
    </array>

    <array name="formularios">
        <item>ARRENDAMIENTO</item>
        <item>BOLETA DE VENTA</item>
        <item>BOLETO AEREO</item>
        <item>BOLETO TERRESTRE</item>
        <item>CARTA DE PORTE AEREO</item>
        <item>DESCUENTO BOLETA</item>
        <item>FACTURA</item>
        <item>MOVILIDAD</item>
        <item>NOTA DE CREDITO</item>
        <item>OTROS DOCUMENTOS</item>
        <item>RECIBO POR HONORARIOS</item>
        <item>SERVICIOS PUBLICOS</item>
        <item>SIN SUSTENTO TRIBUTARIO</item>
        <item>TICKET MAQUINA REGISTRADORA</item>
        <item>MOVILIDAD MULTIPLE</item>
        <item>VOUCHER BANCARIO</item>
    </array>

    <integer name="numFotos">1</integer>

    <string name="validarCampos">Revisar los datos, todos los campos son obligatios</string>
    <string name="btnPositive">Aceptar</string>
    <string name="btnNegative">Cancelar</string>
    <string name="tittleDialog">Confirmacion</string>
    <string name="messageDialog">¿Desea eliminar la rendicion?</string>
    <string name="messageDialogMov">¿Desea Eliminar la Rendicion de Movilidad?</string>
    <string name="messagePendienteListNull">Felicidades, no tienes pendientes por rendir.</string>
    <string name="validarRuc">Verificar RUC</string>
    <string name="validatDatosGenerales">Debe completar los datos Generales antes de continuar</string>
    <string name="sendDataSuccess">Se Guardo el Documento Correctamente</string>



    <string name="filters">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="factura">EF1234567890</string>
    <string name="honorarios">E1234567890</string>
    <string name="boleta">EB1234567890</string>
    <string name="aereo">3</string>
    <string name="numbers">1234567890</string>

    <string name="autocomplete">00000000000000000000</string>
    <string name="validateValorVenta">El importe no puede ser mayor a 700</string>
    <string name="validateValorVentaLidacion">El importe no puede ser mayor</string>
    <string name="sendEmailSuccess">Se envio un Resumen a tu correo</string>
    <string name="sendEmailError">Error, No se pudo enviar la solicitud</string>

    <!--Documentos-->
    <integer name="otros_documentos">20</integer>


    <integer-array name="google_glyph_colors">
        <item>@color/google_blue</item>
    </integer-array>
    <color name="google_blue">#00013b</color>

    <string-array name="overall">
        <item>
            "M 187.00,103.00
           C 187.00,103.00 181.55,119.00 181.55,119.00
             177.97,127.81 171.62,135.58 164.00,141.24
             154.60,148.23 139.70,152.42 128.00,151.96
             108.62,151.21 90.51,141.93 80.47,125.00
             76.12,117.66 73.10,106.53 73.00,98.00
             73.00,98.00 73.00,90.00 73.00,90.00
             73.10,69.22 84.19,50.43 103.00,41.26
             110.81,37.45 119.37,35.80 128.00,35.18
             128.00,35.18 140.00,36.00 140.00,36.00
             131.27,29.09 106.12,23.39 95.00,24.18
             84.17,24.95 73.17,26.41 63.00,30.45
             30.63,43.30 5.42,75.41 5.00,111.00
             4.73,134.76 10.53,156.57 26.30,175.00
             60.89,215.42 124.43,218.28 161.71,179.83
             176.43,164.66 186.97,142.32 187.00,121.00
             187.00,121.00 187.00,103.00 187.00,103.00 Z
           M 125.00,57.28
           C 119.37,58.72 115.50,60.03 111.32,64.30
             97.06,78.89 95.90,127.94 128.00,129.91
             146.80,131.06 156.80,115.01 157.00,98.00
             157.21,79.51 154.15,58.51 131.00,57.28
             128.63,56.95 127.30,57.15 125.00,57.28 Z"
        </item>
    </string-array>

</resources>

